# openwrt_helloworld

./: Makefile  README.md  openwrt_helloworld_package.files  toolchain-arm_cortex-a7.cmake
helloworld/: Makefile  openwrt_helloworld.files  openwrt_helloworld_package.includes
helloworld/src/: CMakeLists.txt  Makefile  MyClass.cpp  MyClass.h  helloworld.cpp
src/: helloworld.cpp
